--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,25 +2,16 @@
 <html lang="en">
   <meta charset="utf-8">
   <title>AirBnB Clone</title>
-  <style>
-    footer{
-        background-color: #0f0;
-        height: 60px;width: 100%;
-        align-items: center;bottom: 0;
-        display: flex;
-        justify-content: center;
-        position: absolute;
-    }
-    header{
-        background-color: #f00;
-        height: 70px; width: 100%;
-    }
-  </style>
-
   <body style="margin: 0; padding: 0;">
-    <header>
+    <header style ="background-color: #f00;
+                    height: 70px; width: 100%;">
     </header>
-    <footer>
+    <footer style="background-color: #0f0;
+                  height: 60px;width: 100%;
+                  align-items: center;bottom: 0;
+                  display: flex;
+                  justify-content: center;
+                  position: absolute;">
       Best School
     </footer>
   </body>
