--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -78,6 +78,37 @@
             This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people.
             It locates at the center of Shanghai and next to subway line 1. 1 stop to People Square. 2 stops to Bund, 3 stops to Jingan Temple. 
           </div>
+
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li><i class="fa fa-television" aria-hidden="true"></i>TV</li>
+              <li><i class="fa fa-wifi" aria-hidden="true"></i>WFI</li>
+              <i class="fa fa-paw" aria-hidden="true"></i></i>Pets friendly</li>
+            </ul>
+          </div>
+
+          <div class="reviews">
+            <h2>2 Reviews</h2>
+              <h3>From Jane the February 26 2017</h3>
+              <ul>
+                <li>
+                  <p>
+                    Cute is absolutely the correct adjective for this joy of a
+                    stay. Five stars!!
+                  </p>
+                </li>
+              </ul>
+              <h3>From Alexis the June 1 2018</h3>
+              <ul>
+                <li>
+                  <p>
+                    Omg I just love the smell of dino chicken nuggets. Reminds me
+                    of my childhood. Def will return!
+                  </p>
+                </li>
+              </ul>
+            </div>
         </article>
 
         <article>
